--- a/RegexExplorer/Storyboards/Sample.storyboard
+++ b/RegexExplorer/Storyboards/Sample.storyboard
@@ -38,6 +38,9 @@
                                         </textView>
                                     </subviews>
                                 </clipView>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="236" id="Sqj-dW-z5e"/>
+                                </constraints>
                                 <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="mgr-tQ-pfb">
                                     <rect key="frame" x="-100" y="-100" width="240" height="16"/>
                                     <autoresizingMask key="autoresizingMask"/>
