The addViewController is now functional for the most part. I just need to work it out to be able to nest groups. I'm thinking about changing the parent text field to a combobox so that as groups are made they can selected or typed in manually to create a new group.

--- a/RegexExplorer/Storyboards/Base.lproj/Main.storyboard
+++ b/RegexExplorer/Storyboards/Base.lproj/Main.storyboard
@@ -461,7 +461,7 @@
                                     <size key="maxSize" width="11" height="11"/>
                                     <connections>
                                         <action selector="addToolbarItem_Action:" target="B8D-0N-5wS" id="aOC-bx-Pg8"/>
-                                        <segue destination="VaT-fL-UEu" kind="sheet" id="pDf-9Z-3cC"/>
+                                        <segue destination="VaT-fL-UEu" kind="sheet" identifier="AddGroupSegue" id="pDf-9Z-3cC"/>
                                     </connections>
                                 </toolbarItem>
                                 <toolbarItem implicitItemIdentifier="NSToolbarShowColorsItem" id="qfO-2y-mkb"/>
